5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4354/executions/1811_2567.log
== TEST (2019-06-08 01:21:57) 
-- CODE:
a = int(input("digite o numero de asteristicos: "))
s = ""
for i in range(a):
	print(a*"*")
	a = a - 1


-- OUTPUT:
********
*******
******
*****
****
***
**
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 01:22:53) 
-- CODE:
a = int(input("digite o numero de asteristicos: "))
s = ""
for i in range(a):
	print(a*"*")
	a = a - 1
for j in range(a):
	print(a*"*")
	a = a + 1

-- OUTPUT:
********
*******
******
*****
****
***
**
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 01:23:29) 
-- CODE:
a = int(input("digite o numero de asteristicos: "))
s = ""
for i in range(a):
	print(a*"*")
-- OUTPUT:
********
********
********
********
********
********
********
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 01:23:43) 
-- CODE:
a = int(input("digite o numero de asteristicos: "))
s = ""
for i in range(a):
	print(a*"*")
	a = a - 1 
-- OUTPUT:
********
*******
******
*****
****
***
**
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 01:24:51) 
-- CODE:
a = int(input("digite o numero de asteristicos: "))
s = ""
for i in range(a):
	print(a*"*")
	a = a - 1
for j in range(a)
	print(a*"*")
	j = j + 1
-- ERROR:
File "XXXX", line 6
    for j in range(a)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 01:24:58) 
-- CODE:
a = int(input("digite o numero de asteristicos: "))
s = ""
for i in range(a):
	print(a*"*")
	a = a - 1
for j in range(a):
	print(a*"*")
	j = j + 1
-- OUTPUT:
********
*******
******
*****
****
***
**
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 01:25:21) 
-- CODE:
a = int(input("digite o numero de asteristicos: "))
s = ""
for i in range(a):
	print(a*"*")
	a = a - 1
for i in range(a):
	print(a*"*")
	i = i + 1
-- OUTPUT:
********
*******
******
*****
****
***
**
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 01:29:35) 
-- CODE:
a = int(input("digite o numero de asteristicos: "))
s = ""
for i in range(a):
	print(a*"*")
	a = a - 1
s = a
for j in range(a):
	s = s - 1
	print((a-s)*"*")
	
	
-- OUTPUT:
********
*******
******
*****
****
***
**
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 17:33:53) 
-- CODE:
a = int(input("digite o numero de asteristicos: "))
s = ""
for i in range(a):
	print("*"*i)

	
	
-- OUTPUT:
*
**
***
****
*****
******
*******
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 17:34:16) 
-- CODE:
a = int(input("digite o numero de asteristicos: "))
s = ""
for i in range(a):
	print("*"*a)

	
	
-- OUTPUT:
********
********
********
********
********
********
********
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 17:38:26) 
-- CODE:
a = int(input("digite o numero de asteristicos: "))
s = ""
for j in range(a)
	print("*"*(a-j))




	
	
-- ERROR:
File "XXXX", line 3
    for j in range(a)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 17:38:32) 
-- CODE:
a = int(input("digite o numero de asteristicos: "))
s = ""
for j in range(a):
	print("*"*(a-j))




	
	
-- OUTPUT:
********
*******
******
*****
****
***
**
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 17:38:51) 
-- CODE:
a = int(input("digite o numero de asteristicos: "))
s = ""
for j in range(a)
	print("*"*(a-j))

for i in range(a):
	print("*"*i)



	
	
-- ERROR:
File "XXXX", line 3
    for j in range(a)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 17:38:51) 
-- CODE:
a = int(input("digite o numero de asteristicos: "))
s = ""
for j in range(a)
	print("*"*(a-j))

for i in range(a):
	print("*"*i)



	
	
-- ERROR:
File "XXXX", line 3
    for j in range(a)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 17:38:51) 
-- CODE:
a = int(input("digite o numero de asteristicos: "))
s = ""
for j in range(a)
	print("*"*(a-j))

for i in range(a):
	print("*"*i)



	
	
-- ERROR:
File "XXXX", line 3
    for j in range(a)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 17:38:58) 
-- CODE:
a = int(input("digite o numero de asteristicos: "))
s = ""
for j in range(a):
	print("*"*(a-j))

for i in range(a):
	print("*"*i)



	
	
-- OUTPUT:
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 17:40:24) 
-- CODE:
a = int(input("digite o numero de asteristicos: "))
s = ""
for j in range(a):
	if(j!=0):
		print("*"*(a-j))

for i in range(a):
	if(i!=0):	
		print("*"*i)



	
	
-- OUTPUT:
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 17:40:34) 
-- CODE:
a = int(input("digite o numero de asteristicos: "))
s = ""
for j in range(a):
	if(j!=0):
		print("*"*(a-j))

for i in range(a):
	if(i!=0):	
		print("*"*i)



	
	
-- EXECUTION TIME:
0.900341
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 17:40:46) 
-- CODE:
a = int(input("digite o numero de asteristicos: "))
s = ""
for j in range(a):
	if(j!=0):
		print("*"*(a-j))

for i in range(a):
	if(i!=0):	
		print("*"*i)



	
	
-- OUTPUT:
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 17:40:58) 
-- CODE:
a = int(input("digite o numero de asteristicos: "))
s = ""
for j in range(a):
	if(j!=0):
		print("*"*(a-j))

for i in range(a):
	if(i!=0):	
		print("*"*i)



	
	
-- OUTPUT:
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 17:41:23) 
-- CODE:
a = int(input("digite o numero de asteristicos: "))
s = ""
for j in range(a):
	if(j!=0):
		print("*"*(a-(j+1)))

for i in range(a):
	if(i!=0):	
		print("*"*(i+1))



	
	
-- OUTPUT:
******
*****
****
***
**
*

**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 17:41:31) 
-- CODE:
a = int(input("digite o numero de asteristicos: "))
s = ""
for j in range(a):
	if(j!=0):
		print("*"*(a-(j+1)))

for i in range(a):
	if(i!=0):	
		print("*"*(i+1))



	
	
-- EXECUTION TIME:
0.751846
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
******
*****
****
***
**
*

**
***
****
*****
******
*******
********
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
*********
********
*******
******
*****
****
***
**
*

**
***
****
*****
******
*******
********
*********
**********
***********
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*

**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 17:41:36) 
-- CODE:
a = int(input("digite o numero de asteristicos: "))
s = ""
for j in range(a):
	if(j!=0):
		print("*"*(a-(j+1)))

for i in range(a):
	if(i!=0):	
		print("*"*(i+1))



	
	
-- OUTPUT:
******
*****
****
***
**
*

**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 17:42:08) 
-- CODE:
a = int(input("digite o numero de asteristicos: "))
s = ""
for j in range(a):
	if(j!=0):
		print("*"*(a-j))

for i in range(a):
	if(i!=0):	
		print("*"*i)



	
	
-- OUTPUT:
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 17:43:33) 
-- CODE:
a = int(input("digite o numero de asteristicos: "))
s = ""
for j in range(a):
	if(j!=0):
		print("*"*(a-j))

for i in range(a):
		
		print("*"*i)



	
	
-- OUTPUT:
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 17:43:38) 
-- CODE:
a = int(input("digite o numero de asteristicos: "))
s = ""
for j in range(a):
	if(j!=0):
		print("*"*(a-j))

for i in range(a):
	print("*"*i)



	
	
-- OUTPUT:
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 17:44:23) 
-- CODE:
a = int(input("digite o numero de asteristicos: "))
s = ""
j = 1
for j in range(a):
	if(j!=0):
		print("*"*(a-j))
i = 1
for i in range(a):
	print("*"*i)



	
	
-- OUTPUT:
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 17:44:40) 
-- CODE:
a = int(input("digite o numero de asteristicos: "))
s = ""
for j in range(a):
	if(j!=0):
		print("*"*(a-j))
for i in range(a):
	print("*"*i)



	
	
-- OUTPUT:
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 17:44:55) 
-- CODE:
a = int(input("digite o numero de asteristicos: "))
s = ""
for j in range(a):
	if(j!=0):
		print("*"*(a-j))
for i in range(a):
	print("*"*(i+1))



	
	
-- OUTPUT:
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 17:45:16) 
-- CODE:
a = int(input("digite o numero de asteristicos: "))
s = ""
for j in range(a):
	if(j!=0):
		print("*"*(a-(j+1))
for i in range(a):
	print("*"*(i+1))



	
	
-- ERROR:
File "XXXX", line 6
    for i in range(a):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 17:45:25) 
-- CODE:
a = int(input("digite o numero de asteristicos: "))
s = ""
for j in range(a):
	if(j!=0):
		print("*"*(a-(j+1))
for i in range(a):
	print("*"*(i+1))



	
	
-- ERROR:
File "XXXX", line 6
    for i in range(a):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 17:45:42) 
-- CODE:
a = int(input("digite o numero de asteristicos: "))
s = ""
for j in range(a):
	if(j!=0):
		print("*"*(a-j)
for i in range(a):
	print("*"*(i+1))



	
	
-- ERROR:
File "XXXX", line 6
    for i in range(a):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 17:45:51) 
-- CODE:
a = int(input("digite o numero de asteristicos: "))
s = ""
for j in range(a)
	if(j!=0):
		print("*"*(a-j))
for i in range(a):
	print("*"*(i+1))



	
	
-- ERROR:
File "XXXX", line 3
    for j in range(a)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 17:45:55) 
-- CODE:
a = int(input("digite o numero de asteristicos: "))
s = ""
for j in range(a):
	if(j!=0):
		print("*"*(a-j))
for i in range(a):
	print("*"*(i+1))



	
	
-- OUTPUT:
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 17:46:15) 
-- CODE:
a = int(input("digite o numero de asteristicos: "))
s = ""
for j in range(a):
	if(j!=0):
		print("*"*(a-j + 1))
for i in range(a):
	print("*"*(i+1))



	
	
-- OUTPUT:
********
*******
******
*****
****
***
**
*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 17:46:25) 
-- CODE:
a = int(input("digite o numero de asteristicos: "))
s = ""
for j in range(a):
	if(j!=0):
		print("*"*(a-j + 1))
for i in range(a):
	print("*"*(i+1))



	
	
-- EXECUTION TIME:
0.802141
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*
**
***
****
*****
******
*******
********
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
**
***
****
*****
******
*******
********
*********
**********
***********
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 17:46:33) 
-- CODE:
a = int(input("digite o numero de asteristicos: "))
s = ""
for j in range(a):
	if(j!=0):
		print("*"*(a-j + 1))
for i in range(a):
	print("*"*(i+1))



	
	
-- OUTPUT:
********
*******
******
*****
****
***
**
*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 17:46:33) 
-- CODE:
a = int(input("digite o numero de asteristicos: "))
s = ""
for j in range(a):
	if(j!=0):
		print("*"*(a-j + 1))
for i in range(a):
	print("*"*(i+1))



	
	
-- OUTPUT:
********
*******
******
*****
****
***
**
*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 17:47:05) 
-- CODE:
a = int(input("digite o numero de asteristicos: "))
s = ""

for i in range(a):
	print("*"*(i+1))



	
	
-- OUTPUT:
*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 17:48:59) 
-- CODE:
a = int(input("digite o numero de asteristicos: "))
s = ""
for j in range(a):
	print("*"*(a-j))
for i in range(a):
	print("*"*(i+1))



	
	
-- OUTPUT:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 17:48:59) 
-- CODE:
a = int(input("digite o numero de asteristicos: "))
s = ""
for j in range(a):
	print("*"*(a-j))
for i in range(a):
	print("*"*(i+1))



	
	
-- OUTPUT:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 17:49:04) 
-- CODE:
a = int(input("digite o numero de asteristicos: "))
s = ""
for j in range(a):
	print("*"*(a-j))
for i in range(a):
	print("*"*(i+1))



	
	
-- OUTPUT:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 17:49:04) 
-- CODE:
a = int(input("digite o numero de asteristicos: "))
s = ""
for j in range(a):
	print("*"*(a-j))
for i in range(a):
	print("*"*(i+1))



	
	
-- OUTPUT:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 17:49:20) 
-- CODE:
a = int(input("digite o numero de asteristicos: "))
s = ""
for j in range(a):
	print("*"*(a-j))
for i in range(a):
	print("*"*(i+1))



	
	
-- EXECUTION TIME:
0.702159
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
